<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/grid_1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/grid_2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_2"
        app:layout_constraintStart_toEndOf="@+id/grid_1_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/grid_3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_3"
        app:layout_constraintEnd_toStartOf="@+id/grid_4_button"
        app:layout_constraintStart_toEndOf="@+id/grid_2_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/grid_4_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/grid_3_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/grid_5_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_1_button" />

    <Button
        android:id="@+id/grid_6_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_6"
        app:layout_constraintStart_toEndOf="@+id/grid_5_button"
        app:layout_constraintTop_toBottomOf="@+id/grid_2_button" />

    <Button
        android:id="@+id/grid_7_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_7"
        app:layout_constraintEnd_toStartOf="@+id/grid_8_button"
        app:layout_constraintStart_toEndOf="@+id/grid_6_button"
        app:layout_constraintTop_toBottomOf="@+id/grid_3_button" />

    <Button
        android:id="@+id/grid_8_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/grid_7_button"
        app:layout_constraintTop_toBottomOf="@+id/grid_4_button" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/answer_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_6_button" />

    <TextView
        android:id="@+id/grid_contents"
        android:layout_width="163dp"
        android:layout_height="270dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:text="@string/grid_contents_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_button" />

    <TextView
        android:id="@+id/results_success"
        android:layout_width="197dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/grid_contents"
        app:layout_constraintTop_toTopOf="@+id/grid_contents" />

    <TextView
        android:id="@+id/results_total_cost"
        android:layout_width="192dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:text="@string/no_results"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/results_success"
        app:layout_constraintTop_toBottomOf="@+id/results_success" />

    <TextView
        android:id="@+id/results_path_taken"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/results_total_cost"
        app:layout_constraintTop_toBottomOf="@+id/results_total_cost"
        app:layout_constraintVertical_bias="0.188" />

</android.support.constraint.ConstraintLayout>